<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@color/background_color"
    tools:context=".InfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="@dimen/button_text_size"
        android:layout_gravity="center"
        android:textColor="@color/text_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="@dimen/button_text_size"
        android:layout_gravity="center"
        android:textColor="@color/text_color"/>

    <Button
        android:id="@+id/back"
        android:onClick="back"
        android:text="@string/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/text_color"
        android:background="@color/landing_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corp"
        android:textSize="@dimen/button_text_size"
        android:layout_gravity="center"
        android:textColor="@color/text_color"/>

</LinearLayout>